# Snake

./: .gitignore  snake.txt
.github/workflows/: deploy.yml
backend/: CMakeLists.txt
backend/include/: game.h  gameController.h  map.h  minisocket.hpp  player.h  snake.h
backend/src/: game.cpp  gameController.cpp  main.cpp  map.cpp  player.cpp  snake.cpp
frontend/: index.html  package-lock.json  package.json
frontend/config/: config.local.json  config.prod.json
frontend/src/: script.ts  types.ts
frontend/src/helpers/: helpers.ts
frontend/styles/: styles.css
